Fix page list on mobile

--- a/custom/custom.css
+++ b/custom/custom.css
@@ -84,7 +84,6 @@ ul, ol {
 
 .page-list {
 
-	list-style-type: none;
 	padding: 0;
 	margin-bottom: 30px;
 	margin-bottom: 1.875rem;
@@ -93,28 +92,69 @@ ul, ol {
 .page-list li,
 .page-list .children li {
 
-	padding-left: 16px;
-	padding-right: 16px;
-	padding-left: 1rem;
-	padding-right: 1rem;
-	border-left: 1px solid #ccc;
+	display: inline-block;
+}
+
+.page-list a {
+
+	padding-right: 8px;
+	padding-right: .5rem;
+}
+
+.page-list li::before {
+
+	content: "\00B7";
+	padding-right: 8px;
+	padding-right: .5rem;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .page-list .children {
 
-	margin-left: 16px;
-	margin-left: 1rem;
+	display: inline;
 }
+
+@media only screen and (min-width: 55em) {
+
+	.page-list a {
+
+		padding-right: 0;
+	}
+
+	.page-list li::before{
+
+		content: "";
+		padding-right: 0;
+	}
+
+	.page-list {
+
+		list-style-type: none;
+	}
+
+	.page-list li,
+	.page-list .children li {
+
+		padding-left: 16px;
+		padding-right: 16px;
+		padding-left: 1rem;
+		padding-right: 1rem;
+		border-left: 1px solid #ccc;
+	}
+
+	.page-list .children {
+
+		margin-left: 16px;
+		margin-left: 1rem;
+	}
+}
+
+
 
 .page-list > li:first-child {
 
 	padding-left: 0;
 	border-left: none;
-}
-
-.page-list li, .page-list .children {
-
-	display: inline-block;
 }
 
 #drop-down-left .current_page_item.current_page_item > a,
